--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/alura/styles/style.css"> 
+    <link rel="stylesheet" href="./styles/style.css"> 
     <title>Sobre mim</title>
 </head>
 <body>
@@ -17,10 +17,10 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-            <p class="apresentacao__conteudo__texto">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.</p>
+            <p class="apresentacao__conteudo__texto">Sou um jovem de 22 anos, estudante do 6º semestre de Ciência da Computação, apaixonado por tecnologia e desenvolvimento de software. Atualmente, estou ganhando experiência prática como estagiário de desenvolvimento na IT Lab, onde venho aprimorando minhas habilidades em programação e resolução de problemas. Meu foco está em aprender e aplicar conhecimentos em linguagens de Front e Back-End e no uso de ferramentas como Power BI e bancos de dados.</p>
+            <p class="apresentacao__conteudo__texto">Este portfólio é uma demonstração do meu crescimento contínuo como desenvolvedor e foi criado como parte do meu aprendizado de HTML e CSS durante um curso da Alura. Ele reflete minha curiosidade e dedicação em explorar novas tecnologias, com o objetivo de me tornar um profissional completo e capaz de entregar soluções inovadoras e eficientes.</p>
         </section>
-        <img class="apresentacao__imagem" src="/alura/assets/Imagem.png" alt="Imagem da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/ImagemIan.png" alt="Imagem do Ian programando">
     </main>
 
     <footer class="rodape">
