--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="/alura/styles/style.css"> 
+    <link rel="stylesheet" href="./styles/style.css"> 
 </head>
 <body>
     <header class="cabecalho">
@@ -17,24 +17,24 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-        <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+        <p class="apresentacao__conteudo__texto">Olá! Sou Ian Godinho, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <div class="apresentacao__links">
             <h2 class="apresentacao__links_subtitulo">Acesse minhas redes:</h2>
-            <a class="apresentacao__links__navegacao" href="https://github.com/">
-                <img src="/alura/assets/github.png" alt="Logo Github">
+            <a class="apresentacao__links__navegacao" href="https://github.com/iangodinho">
+                <img src="./assets/github.png" alt="Logo Github">
                 Github
             </a>
-            <a class="apresentacao__links__navegacao" href="https://linkedin.com/">
-                <img src="/alura/assets/linkedin.png" alt="Logo Linkedin">
+            <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/iangodinho/">
+                <img src="./assets/linkedin.png" alt="Logo Linkedin">
                 LinkedIn
             </a>
-            <a class="apresentacao__links__navegacao" href="https://twitch.tv/">
-                <img src="/alura/assets/twitch.png" alt="Logo Twitch">
-                Twitch
+            <a class="apresentacao__links__navegacao" href="https://www.instagram.com/ian.maxx/">
+                <img src="./assets/instagram.png" alt="Logo Instagram">
+                Instagram
             </a>
         </div>
         </section>
-        <img class="apresentacao__imagem" src="/alura/assets/Imagem.png" alt="Imagem da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/ImagemIan.png" alt="Imagem do Ian programando">
     </main>
 
     <footer class="rodape">
